add unread messages notification

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
             data: {toggle: "dropdown"}, id: "notifications" do %>
             <%= fa_icon "bell" %>
 
-            <span id="notifications_count" class="badge badge-pill badge-danger"></span>
+            <span id="notifications_count" class="badge badge-danger"></span>
           <% end %>
 
           <ul id="notifications_list" class="dropdown-menu no-padding">
